# attract

./: .gitignore  Cargo.toml  README.md
examples/: clifford.rs  common.rs  de_jong.rs  henon.rs  movie.rs  render.rs  simple.rs
examples/common/: attractor_builder.rs  colour_maps.rs  configuration.rs  generator_builder.rs  mod.rs  parameter.rs
input/: chirikov.yaml  clifford.yaml  clifford_movie.yaml  colour_maps.yaml  de_jong.yaml  duffing.yaml  gingerbreadman.yaml  henon.yaml  ikeda.yaml  tinkerbell.yaml
input/clifford/: eye.yaml  loops.yaml  new.yaml  sophie.yaml
scripts/: create_gif.sh  create_movie.sh
src/: attractor.rs  complex.rs  lib.rs  render.rs  settings.rs
src/attractor/: chirikov.rs  clifford.rs  de_jong.rs  duffing.rs  gingerbreadman.rs  henon.rs  ikdea.rs  mod.rs  tinkerbell.rs
src/generator/: aabb.rs  circle.rs  gaussian.rs  mod.rs
